--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Roboto', sans-serif;
-    color: #333;
+    color: #fc92dc;
 }
 
 #info {
